combine Filter and Search
